HeaderAnother,BlogNav,Blogを修正

--- a/components/BlogNav/BlogNav.module.scss
+++ b/components/BlogNav/BlogNav.module.scss
@@ -6,7 +6,9 @@
 
 .body {
   width: 100%;
-  height: 100px;
+  // height: 100px;
+  height: 80px; //🔥🔥🔥
+  height: 100px; //🔥🔥🔥
   position: relative;
   z-index: 10;
   @include center;
@@ -30,11 +32,14 @@
     h4 {
       margin: 0;
       color: white;
-      font-size: 1rem; //🔥🔥🔥
+      // font-size: 1rem;
+      font-size: 0.8rem; //🔥🔥🔥
     }
 
     h1 {
-      font-size: 2.3rem; //🔥🔥🔥
+      // font-size: 2.3rem;
+      // font-size: 2rem;
+      font-size: 1.8rem; //🔥🔥🔥
 
       margin: 0;
       color: white;
@@ -42,19 +47,23 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
+  // @media screen and (max-width: 800px) {
   // @media screen and (max-width: 768px) {
   .body {
-    height: 100px;
+    // height: 100px;
     height: 80px;
 
     .title {
       h4 {
+        // font-size: 0.8rem; //🔥🔥🔥
+        // font-size: 0.7rem;
         font-size: 0.8rem; //🔥🔥🔥
       }
 
       h1 {
-        font-size: 1.8rem; //🔥🔥🔥
+        // font-size: 1.8rem; //🔥🔥🔥
+        font-size: 1.6rem; //🔥🔥🔥
       }
     }
   }
@@ -63,18 +72,24 @@
 @media screen and (max-width: 480px) {
   .body {
     // height: 100px;
-    height: 80px; //🔥🔥🔥
-    top: -30px; //🔥🔥🔥
+    // height: 80px;
+    height: 70px; //🔥🔥🔥
+    // top: -30px;
+    // top: 0px;
+    top: -20px; //🔥🔥🔥
 
     .title {
       h4 {
+        // font-size: 0.8em;
+        // font-size: 0.7em;
         // font-size: 0.8em;
         font-size: 0.7em; //🔥🔥🔥
       }
 
       h1 {
         // font-size: 2rem;
-        font-size: 1.5rem; //🔥🔥🔥
+        // font-size: 1.5rem;
+        font-size: 1.3rem; //🔥🔥🔥
       }
     }
   }
