--- a/components/Header/hederAnother.module.scss
+++ b/components/Header/hederAnother.module.scss
@@ -1,87 +1,108 @@
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .body {
-  // background-color: blue;
+  // border: 3px solid red;
   background-color: black;
-  // opacity: 0.7;
   width: 100%;
-  height: 130px;
+  height: 100px;
   position: fixed;
-  left: 0;
   top: 0;
-  z-index: 10;
+  left: 0;
+  z-index: 10; //🔥
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   transition-duration: 300ms;
+  @include center;
+  justify-content: space-between;
+  padding: 0 3rem;
 
-  .section {
-    height: 130px;
-    // background-color: blue;
-    background-color: black;
-    max-width: 1240px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+  .title {
+    // border: 3px solid blue;
     color: white;
 
     h1 {
-      font-size: 40px;
-      margin: 0 0 0 1rem;
-      cursor: pointer;
+      font-size: 2rem;
     }
+  }
 
-    .nav {
+  nav {
+    // border: 3px solid green;
+
+    ul {
       // border: 3px solid orange;
-      display: none;
+      list-style: none;
+      display: flex;
+
+      li:nth-child(4) {
+        margin-right: 0;
+        background-color: orangered;
+      }
 
       li {
-        // border: 3px solid green;
-        list-style: none;
+        // border: 3px solid red;
+        margin-right: 1rem;
+        border-radius: 10px;
 
-        .orangeButton {
-          background-color: orangered;
+        .item {
+          // border: 3px solid blue;
+          border: 1px solid black;
+          padding: 0.8rem;
+          font-weight: bold;
+          border-radius: 10px;
+          color: white;
+          font-size: 1rem;
+
+          &:hover {
+            background-color: orange;
+            transition: 300ms;
+          }
         }
       }
     }
+  }
 
-    .button {
-      display: block;
-      z-index: 10;
-      margin-right: 1rem;
-    }
+  .hamburgerButton {
+    // border: 3px solid magenta;
+    z-index: 10;
+    color: white;
+    @include center;
+    display: none;
+    padding: 1rem;
+    cursor: pointer;
+  }
 
-    .menuOpen {
-      background-color: black;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100vh;
-      text-align: center;
-      transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-      transition-duration: 300ms;
+  .menuOpen {
+    background-color: black;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    @include center;
+    text-align: center;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    transition-duration: 300ms;
 
-      ul {
-        padding: 0;
+    ul {
+      padding: 0;
+      list-style: none;
+
+      li {
+        padding: 1rem;
         list-style: none;
+        color: white;
 
-        li {
-          padding: 1rem;
-          font-size: 32px;
-        }
-
-        a {
-          font-weight: bold;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 1rem;
-          display: flex;
+        h1 {
           border: 3px solid black;
+          font-size: 2rem;
+          font-weight: bold;
+          @include center;
+          padding: 1rem;
           transition: 300ms;
 
           &:hover {
@@ -90,39 +111,36 @@
         }
       }
     }
+  }
 
-    .menuClose {
-      background-color: black;
-      position: absolute;
-      top: 0;
-      left: -100%;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100vh;
-      text-align: center;
-      transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-      transition-duration: 300ms;
+  .menuClose {
+    background-color: black;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    right: 0;
+    bottom: 0;
+    @include center;
+    text-align: center;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    transition-duration: 300ms;
 
-      ul {
-        padding: 0;
+    ul {
+      padding: 0;
+      list-style: none;
+
+      li {
+        padding: 1rem;
         list-style: none;
 
-        li {
-          padding: 1rem;
-          font-size: 32px;
-        }
-        a {
-          font-weight: bold;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 1rem;
-          display: flex;
+        h1 {
           border: 3px solid black;
+          @include center;
+          font-size: 2rem;
+          font-weight: bold;
+          padding: 1rem;
 
           &:hover {
             border-bottom: 3px solid white;
@@ -133,56 +151,27 @@
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (max-width: 1024px) {
   .body {
-    .section {
-      .nav {
-        // border: 3px solid red;
-        display: flex;
-        padding: 0;
-
-        li {
-          // border: 3px solid blue;
-          padding: 1rem 0.5rem;
-          font-size: 20px;
-
-          a {
-            // border: 3px solid green;
-            font-weight: bold;
-            padding: 1rem;
-            display: flex;
-            border-radius: 10px;
-            transition: 300ms;
-
-            &:hover {
-              background-color: orange;
-              color: white;
-            }
-          }
-        }
-      }
-
-      .button {
-        display: none;
-      }
-
-      .menuOpen {
-        display: none;
-      }
-
-      .menuClose {
-        display: none;
+    .title {
+      h1 {
+        // font-size: 1.5rem;
+        font-size: 1.8rem;
       }
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .body {
-    .section {
-      h1 {
-        font-size: 35px;
-      }
+    padding: 0 2rem;
+
+    nav {
+      display: none;
+    }
+
+    .hamburgerButton {
+      display: block;
     }
   }
 }
@@ -190,19 +179,12 @@
 @media screen and (max-width: 480px) {
   .body {
     height: 100px;
-
-    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-    transition-duration: 0ms;
-
-    .section {
-      height: 100px;
+    height: 80px; //🔥
+    padding: 0 1.5rem;
+    .title {
       h1 {
-        font-size: 28px;
-        margin: 0;
-      }
-
-      .button {
-        margin-right: 0;
+        // font-size: 1.2rem;
+        font-size: 1.6rem;
       }
     }
   }
@@ -210,27 +192,21 @@
 
 @media screen and (max-width: 390px) {
   .body {
-    height: 100px;
-
-    .section {
-      height: 100px;
+    padding: 0 1rem;
+    .title {
       h1 {
-        font-size: 25px;
+        font-size: 1.2rem;
       }
     }
   }
 }
 
-// 👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇👇
-
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 320px) {
   .body {
-    height: 100px;
-
-    .section {
-      height: 100px;
+    padding: 0 1rem;
+    .title {
       h1 {
-        font-size: 25px;
+        font-size: 1.1rem;
       }
     }
   }
