--- a/components/BlogNav/BlogNav.module.scss
+++ b/components/BlogNav/BlogNav.module.scss
@@ -6,8 +6,6 @@
 
 .body {
   width: 100%;
-  // height: 100px;
-  height: 80px; //🔥🔥🔥
   height: 100px; //🔥🔥🔥
   position: relative;
   z-index: 10;
@@ -32,13 +30,10 @@
     h4 {
       margin: 0;
       color: white;
-      // font-size: 1rem;
       font-size: 0.8rem; //🔥🔥🔥
     }
 
     h1 {
-      // font-size: 2.3rem;
-      // font-size: 2rem;
       font-size: 1.8rem; //🔥🔥🔥
 
       margin: 0;
@@ -48,21 +43,15 @@
 }
 
 @media screen and (max-width: 1024px) {
-  // @media screen and (max-width: 800px) {
-  // @media screen and (max-width: 768px) {
   .body {
-    // height: 100px;
     height: 80px;
 
     .title {
       h4 {
-        // font-size: 0.8rem; //🔥🔥🔥
-        // font-size: 0.7rem;
         font-size: 0.8rem; //🔥🔥🔥
       }
 
       h1 {
-        // font-size: 1.8rem; //🔥🔥🔥
         font-size: 1.6rem; //🔥🔥🔥
       }
     }
@@ -71,25 +60,19 @@
 
 @media screen and (max-width: 480px) {
   .body {
-    // height: 100px;
-    // height: 80px;
-    height: 70px; //🔥🔥🔥
-    // top: -30px;
-    // top: 0px;
+    // height: 70px; //🔥🔥🔥
+    height: 60px; //🔥🔥🔥
     top: -20px; //🔥🔥🔥
 
     .title {
       h4 {
-        // font-size: 0.8em;
         // font-size: 0.7em;
-        // font-size: 0.8em;
-        font-size: 0.7em; //🔥🔥🔥
+        font-size: 0.6em; //🔥🔥🔥
       }
 
       h1 {
-        // font-size: 2rem;
-        // font-size: 1.5rem;
-        font-size: 1.3rem; //🔥🔥🔥
+        // font-size: 1.3rem;
+        font-size: 1.2rem; //🔥🔥🔥
       }
     }
   }
