--- a/components/BlogNav/BlogNav.module.scss
+++ b/components/BlogNav/BlogNav.module.scss
@@ -6,7 +6,7 @@
 
 .body {
   width: 100%;
-  height: 100px; //🔥🔥🔥
+  height: 100px;
   position: relative;
   z-index: 10;
   @include center;
@@ -30,11 +30,11 @@
     h4 {
       margin: 0;
       color: white;
-      font-size: 0.8rem; //🔥🔥🔥
+      font-size: 0.8rem;
     }
 
     h1 {
-      font-size: 1.8rem; //🔥🔥🔥
+      font-size: 1.8rem;
 
       margin: 0;
       color: white;
@@ -48,11 +48,11 @@
 
     .title {
       h4 {
-        font-size: 0.8rem; //🔥🔥🔥
+        font-size: 0.8rem;
       }
 
       h1 {
-        font-size: 1.6rem; //🔥🔥🔥
+        font-size: 1.6rem;
       }
     }
   }
@@ -60,19 +60,16 @@
 
 @media screen and (max-width: 480px) {
   .body {
-    // height: 70px; //🔥🔥🔥
-    height: 60px; //🔥🔥🔥
-    top: -20px; //🔥🔥🔥
+    height: 60px;
+    top: -20px;
 
     .title {
       h4 {
-        // font-size: 0.7em;
-        font-size: 0.6em; //🔥🔥🔥
+        font-size: 0.6em;
       }
 
       h1 {
-        // font-size: 1.3rem;
-        font-size: 1.2rem; //🔥🔥🔥
+        font-size: 1.2rem;
       }
     }
   }
