--- a/styles/latest-blog.module.scss
+++ b/styles/latest-blog.module.scss
@@ -855,8 +855,6 @@
     main {
       // border: 3px solid red;
       height: calc(100vh - 240px); //💎💎💎
-      // margin-top: 110px;
-      // margin-top: 90px; //💎💎💎
       margin-top: 80px; //💎💎💎
 
       .mainSection {
@@ -871,13 +869,10 @@
             // border: 3px solid blue;
 
             h4 {
-              // font-size: 0.7rem;
               font-size: 0.6rem;
             }
 
             h1 {
-              // font-size: 1.3rem;
-              // font-size: 1.2rem;
               font-size: 1.1rem; //💎💎💎
             }
           }
@@ -962,11 +957,8 @@
 
     .navSection {
       // border: 3px solid red;
-      // padding: 1.5rem 2rem 1rem;
       padding: 1rem 2rem 1rem; //💎💎💎
-      // top: 150px; //💎💎💎
       top: 140px; //💎💎💎
-      // height: 110px;
       height: 100px; //💎💎💎
 
       .navSectionTitle {
@@ -976,7 +968,6 @@
           }
 
           h1 {
-            // font-size: 1.2rem;
             font-size: 1.1rem; //💎💎💎
           }
         }
@@ -989,10 +980,8 @@
           margin: 0 0 1rem 2rem; //💎💎💎
 
           a {
-            // font-size: 0.95rem;
             font-size: 0.8rem;
-            // padding: 0.8rem;
-            padding: 0.6rem; //
+            padding: 0.6rem;
             width: 80%;
           }
         }
@@ -1077,7 +1066,6 @@
           margin: 0 0 1rem 1rem; //💖💖💖
 
           a {
-            // font-size: 0.85rem;
             font-size: 0.8rem; //💖💖💖
             padding: 0.6rem; //💖💖💖
             width: 90%; //💖💖💖
